# Rengine

./: .gitattributes  CMakeLists.txt  README.md
InternalResources/: ReadMe.md
LibSources/: CMakeLists.txt
LibSources/glfw/examples/: boing.c
LibSources/stb/: stb_image.h
Projects/: ReadMe.md
Source/: CMakeLists.txt  Main.cpp
Source/Common/: Application.cpp  Application.hpp  Common.hpp  FileOperation.cpp  FileOperation.hpp
Source/Common/File/: DirectoryInfo.cpp  DirectoryInfo.hpp  FileInfo.cpp  FileInfo.hpp
Source/Common/Utility/: Alloc.hpp  IReusable.hpp  ObjectPool.cpp  ObjectPool.hpp  Singleton.hpp
Source/Core/: 平台独立层.md
Source/Editor/AssetsManager/: AssetDatabase.cpp  AssetDatabase.hpp
Source/GameSystem/: GameUpdater.cpp  GameUpdater.h  World.cpp  World.hpp  核心系统.md
Source/GameSystem/Component/: IComponent.h
Source/GameSystem/Components/: Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Transform.cpp  Transform.hpp
Source/GameSystem/Entities/: Entity.cpp  Entity.hpp  EntityPool.cpp  EntityPool.hpp
Source/GameSystem/Manager/: IManager.h
Source/GameSystem/Systems/: System.cpp  System.hpp
Source/GameSystem/Systems/GameObjectSystem/: EntitySystem.cpp  EntitySystem.hpp
Source/GameSystem/Systems/InputSystem/: InputSystem.cpp  InputSystem.hpp
Source/GameSystem/Systems/OnGUISystem/: OnGUISystem.cpp  OnGUISystem.hpp
Source/GameSystem/Systems/RenderSystem/: OpenGLRenderSystem.cpp  OpenGLRenderSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
Source/GameSystem/Systems/ScriptSystem/Lua/: LuaEngine.cpp  LuaEngine.hpp
Source/GameSystem/Utility/: Utility.hpp
Source/GameSystem/Utility/LogEngine/: LogEngine.cpp  LogEngine.hpp
Source/GameSystem/Utility/Time/: Time.cpp  Time.hpp
Source/Renderer/OpenGL/: GLCamera.cpp  GLCamera.hpp  GLMatrial.cpp  GLMatrial.hpp  GLMesh.cpp  GLMesh.hpp  GLModel.cpp  GLModel.hpp  GLOldMesh.cpp  GLOldMesh.hpp  GLShader.cpp  GLShader.hpp  GLShaderLoader.cpp  GLShaderLoader.hpp  GLTexture.cpp  GLTexture.hpp  GLTypeUtil.cpp  GLTypeUtil.hpp  GLWindow.cpp  GLWindow.hpp  MeshRenderer.cpp  MeshRenderer.hpp  OpenGLAllInOne.hpp  OpenGLHelper.hpp
Test/TestCommon/: TestApplication.cpp
